# cg-learning

./: .gitmodules  LICENSE
shushurender/: .gitignore  CMakeLists.txt
shushurender/source/config/: config.h
shushurender/source/platform/: platform.cpp  platform.h
shushurender/source/render/: shushurender.cpp  shushurender.h
shushurender/source/render/backend/: graphics_backend.h
shushurender/source/render/backend/shushugl/: shushugl.h
shushurender/source/tools/: debug_message.cpp  debug_message.h  debug_tools.h
step1/mytinyrender/: CMakeLists.txt  geometry.h  main.cpp
